--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,4 +4,4 @@ roles_path = ./roles
 host_key_checking = False
 remote_user = jenka
 private_key_file = ~/.ssh/id_ed25519
-stdout_callback = yaml
+# stdout_callback = yaml
