--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -6,10 +6,11 @@
 #    update_cache: yes
 
 - name: Refresh dnf cache
-  dnf:
-    update_cache: yes
-    name: "dummy"
+  command: dnf makecache
+  args:
+    warn: false
   changed_when: false
+  become: yes
 
 - name: Upgrade all packages (may take a while)
   command: dnf -y upgrade --refresh
