--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,22 +1,23 @@
 ---
-#- name: Update system
-#  dnf:
-#    name: "*"
-#    state: latest
-#    update_cache: yes
-
-- name: Refresh dnf cache
-  command: dnf makecache
-  args:
-    warn: false
-  changed_when: false
+- name: Update system
+  dnf:
+    name: "*"
+    state: latest
+    update_cache: yes
   become: yes
-
-- name: Upgrade all packages (may take a while)
-  command: dnf -y upgrade --refresh
-  args:
-    warn: false
-  changed_when: false
+  
+#- name: Refresh dnf cache
+#  command: dnf makecache
+#  args:
+#    warn: false
+#  changed_when: false
+#  become: yes
+#
+#- name: Upgrade all packages (may take a while)
+#  command: dnf -y upgrade --refresh
+#  args:
+#    warn: false
+#  changed_when: false
 
 - name: Install common packages
   dnf:
