--- a/roles/opensearch/tasks/main.yml
+++ b/roles/opensearch/tasks/main.yml
@@ -9,14 +9,20 @@
     key: https://artifacts.opensearch.org/publickeys/opensearch.pgp
     state: present
 
-- name: Add OpenSearch repo
-  dnf_repository:
-    name: opensearch
-    description: OpenSearch repository for 2.x packages
-    baseurl: https://artifacts.opensearch.org/releases/bundle/opensearch/2.x/yum/
-    gpgcheck: yes
-    gpgkey: https://artifacts.opensearch.org/publickeys/opensearch.pgp
-    enabled: yes
+- name: Add OpenSearch repo (via ini_file)
+  ini_file:
+    path: /etc/yum.repos.d/opensearch.repo
+    section: opensearch
+    option: "{{ item.option }}"
+    value: "{{ item.value }}"
+    mode: '0644'
+  loop:
+    - { option: name, value: "OpenSearch repository for 2.x packages" }
+    - { option: baseurl, value: "https://artifacts.opensearch.org/releases/bundle/opensearch/2.x/yum/" }
+    - { option: gpgcheck, value: "1" }
+    - { option: gpgkey, value: "https://artifacts.opensearch.org/publickeys/opensearch.pgp" }
+    - { option: enabled, value: "1" }
+  become: yes
 
 - name: Install OpenSearch
   dnf:
