--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,3 +5,6 @@ host_key_checking = False
 remote_user = jenka
 private_key_file = ~/.ssh/id_ed25519
 # stdout_callback = yaml
+
+[ssh_connection]
+pipelining = True
