--- a/roles/waf/files/custom_dos.conf
+++ b/roles/waf/files/custom_dos.conf
@@ -1,8 +1,8 @@
-# Инициализация коллекции для отслеживания IP
-SecAction "id:100002,phase:1,nolog,pass,initcol:IP=%{REMOTE_ADDR}"
+# Инициализация коллекции для отслеживания IP (пишем 'ip' маленькими буквами)
+SecAction "id:100002,phase:1,nolog,pass,initcol:ip=%{REMOTE_ADDR}"
 
-# Блокировка, если более 100 запросов за 60 секунд
-SecRule IP:COUNT "@gt 100" "id:100003,phase:1,deny,status:429,msg:'Potential DoS Attack Detected'"
+# Блокировка, если более 100 запросов за 60 секунд (обращаемся к ip:count)
+SecRule ip:count "@gt 100" "id:100003,phase:1,deny,status:429,msg:'Potential DoS Attack Detected'"
 
-# Увеличение счетчика и установка времени жизни переменной
-SecAction "id:100004,phase:5,nolog,pass,setvar:IP.COUNT=+1,expirevar:IP.COUNT=60"
+# Увеличение счетчика (используем ip.count)
+SecAction "id:100004,phase:5,nolog,pass,setvar:ip.count=+1,expirevar:ip.count=60"
